# LabGroup3PADSCelonis

./: README.md  pyproject.toml
algorithms/emma/: data_structures.py  phase1_itemset_mining.py  phase2_encoding.py  phase3_episode_mining.py  utils.py
algorithms/emma/tests/: test_phase1.py  test_phase2.py  test_phase3.py
common/data_loader/: loader.py
common/data_loader/meta_information/: column_meta.py  foreign_key_meta.py  sql_view.py  table_meta.py
common/data_loader/ocel2/: model.py  ocdm_table_extractor.py
common/data_loader/picker_components/: base.py  helper.py  ocel2.py  pycelonis.py
common/data_loader/sql_accessor/: base.py  duckdb.py  helper.py
common/utils/: streamlit_utils.py
prototypes/draft/: README.md  functions.py  main.py  packages.txt  requirements.txt
prototypes/draft/Views/: EMMA_Pattern_Vorschau_JSON.csv  data_csv.py  data_selection.py  data_selection_table.py  pattern_view.py  pattern_viz_view.py
prototypes/draft/Views/tests/: test_data_csv.py  test_data_selection_and_table.py  test_pattern_view.py
prototypes/draft/tests/: test_functions.py  test_main.py
prototypes/example/: README.md  bootstrap.py  main.py
