[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.0"
pydantic = "<2.0.0"
numpy = "<2.0.0"
pycelonis = {version = "^2.3.0", source = "pypicel"}
duckdb = "0.10.2"
trio = "^0.22.2"
streamlit = "^1.37"
graphviz = "^0.21"
pyvis = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.20.1"
pytest-xdist = "^3.0.2"
streamlit_mock = "^0.0.1"
toml = "^0.10.2"

[[tool.poetry.source]]
name = "pypicel"
url = "https://pypi.celonis.cloud/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
exclude = [
    'build',
    'docs',
]

[tool.flakeheaven.plugins]
pycodestyle = ["-W503"]

[tool.pylint.'MASTER']
ignore = ['docs']

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'import-error',
    'missing-module-docstring',
    'missing-function-docstring',
    'too-few-public-methods',
    'missing-class-docstring',
    'wrong-import-order',
    'invalid-name',
    'line-too-long'
]

### Tools ###
[tool.pytest.ini_options]
log_cli = true
log_cli_level = 'DEBUG'
asyncio_mode = 'auto'
